--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     
-    <link rel="stylesheet" href="https://pingqingsheng.github.io/css/style.css?t=1492232609">
+    <link rel="stylesheet" href="https://pingqingsheng.github.io/css/style.css?t=1492233217">
     
 
 
@@ -57,6 +57,13 @@
 >
 
 
+
+<script>
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+ga('create', 'UA-97431971-1', 'auto');
+ga('send', 'pageview');
+</script>
+<script async src='//www.google-analytics.com/analytics.js'></script>
 
 
 
