fixing dates on index files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="referrer" content="no-referrer">
-<meta name="description" content="This Site is up-to-date ver 0.01">
+<meta name="description" content="This Site is up-to-date ver 0.02">
 
 <base href="/">
 <title>
@@ -225,7 +225,7 @@ You'll never know the reaction of things around you. So be careful......
 
 <h2 class="title is-2 has-text-centered">Latest Post</h2>
      
-    <div class="summary">April 40, 26047
+    <div class="summary">April 27,2017
         <h3 class="title is-3 latest-post-title"><a href="/blog/build-a-r-package-with-rcpp-in-30-minutes/">Build a R Package with Rcpp in 30 minutes</a></h3>
             <div class="markdown">
             Rcpp  is package with which you could write c++ code within R.You could simply write a inline C++ code in R like this:
